<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:background="@color/white">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/greetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/michelle"
        android:textStyle="bold"
        android:textColor="@color/background"
        android:textFontWeight="500"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/secondary_button"
        android:text="@string/track_my_orders"
        android:textColor="@color/secondary_text_color"
        android:textSize="12sp"
        android:paddingHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetName"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/trending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:text="Trending"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:alpha="0.8"
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/trending"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:srcCompat="@drawable/arrow_down" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trending" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:text="@string/categories"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trending_recycler_view" />

    <ImageView
        android:id="@+id/categories_icon"
        android:alpha="0.8"
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/categories"
        app:layout_constraintTop_toBottomOf="@+id/trending_recycler_view"
        app:srcCompat="@drawable/arrow_down" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories" />

</androidx.constraintlayout.widget.ConstraintLayout>
